EX-15: Sessions controller except logout
