# app/models/staff.rb
@@ -5,7 +5,10 @@ class Staff < ApplicationRecord
   enum role: { admin: 0, instuctor: 1, proctor: 2 }
 
   #Validations
-  validates_presence_of :name
+  has_secure_password validations: false
+
+  validates_presence_of :first_name, :last_name, :username
+  validates_presence_of :username
   validates :email, presence: true, format: { with: VALID_EMAIL_REGEX }, uniqueness: true
   validates :password , length: { minimum: 6 }
   validates_presence_of :role
@@ -22,10 +25,12 @@ end
 #
 #  id                   :bigint           not null, primary key
 #  email                :string
+#  first_name           :string
+#  last_name            :string
 #  must_change_password :boolean          default(TRUE)
-#  name                 :string
 #  password_digest      :string
 #  role                 :integer
+#  username             :string
 #  created_at           :datetime         not null
 #  updated_at           :datetime         not null
 #  faculty_id           :bigint           not null
