# app/models/student.rb
@@ -2,7 +2,10 @@ class Student < ApplicationRecord
   VALID_EMAIL_REGEX = /\A[\w+\-.]+@[a-z\d\-]+(\.[a-z\d\-]+)*\.[a-z]+\z/i
 
   #Validations
-  validates_presence_of :name
+  has_secure_password validations: false
+
+  validates_presence_of :first_name, :last_name, :username
+  validates_presence_of :username
   validates :email, presence: true, format: { with: VALID_EMAIL_REGEX }, uniqueness: true
   validates :password , length: { minimum: 6 }
   validates :academic_id, presence: true, uniqueness: { scope: :faculty }
@@ -19,9 +22,11 @@ end
 #
 #  id                   :bigint           not null, primary key
 #  email                :string
+#  first_name           :string
+#  last_name            :string
 #  must_change_password :boolean          default(TRUE)
-#  name                 :string
 #  password_digest      :string
+#  username             :string
 #  created_at           :datetime         not null
 #  updated_at           :datetime         not null
 #  academic_id          :string
