# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2023_03_01_213328) do
+ActiveRecord::Schema.define(version: 2023_03_20_230829) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -23,7 +23,6 @@ ActiveRecord::Schema.define(version: 2023_03_01_213328) do
   end
 
   create_table "staffs", force: :cascade do |t|
-    t.string "name"
     t.string "email"
     t.string "password_digest"
     t.boolean "must_change_password", default: true
@@ -31,12 +30,14 @@ ActiveRecord::Schema.define(version: 2023_03_01_213328) do
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
     t.bigint "faculty_id", null: false
+    t.string "first_name"
+    t.string "last_name"
+    t.string "username"
     t.index ["email"], name: "index_staffs_on_email", unique: true
     t.index ["faculty_id"], name: "index_staffs_on_faculty_id"
   end
 
   create_table "students", force: :cascade do |t|
-    t.string "name"
     t.string "email"
     t.string "password_digest"
     t.boolean "must_change_password", default: true
@@ -44,6 +45,9 @@ ActiveRecord::Schema.define(version: 2023_03_01_213328) do
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
     t.bigint "faculty_id", null: false
+    t.string "first_name"
+    t.string "last_name"
+    t.string "username"
     t.index ["email"], name: "index_students_on_email", unique: true
     t.index ["faculty_id"], name: "index_students_on_faculty_id"
   end
